--- a/config.env.sample
+++ b/config.env.sample
@@ -1,6 +1,11 @@
-SPOTIPY_CLIENT_ID=
-SPOTIPY_CLIENT_SECRET=
-SPOTIPY_REDIRECT_URI=http://127.0.0.1:9090
+# SPDX-FileCopyrightText: © 2024 Stacey Adams <stacey.belle.rose [AT] gmail [DOT] com>
+# SPDX-License-Identifier: CC0-1.0
+
+SPOTIPY_CLIENT_ID= # fill this in for your own Spotify app
+SPOTIPY_CLIENT_SECRET= # fill this in for your own Spotify app
+SPOTIPY_REDIRECT_URI=http://127.0.0.1:9090 # fill this in for your own Spotify app
+
+# You can also override any of these values here
 LCD_BACKLIGHT=1
 IP_TIMEOUT=10
 I2C_BUS=1
