Fix lint errors and clean up licensing

--- a/config.env.sample
+++ b/config.env.sample
@@ -1,5 +1,5 @@
-# SPDX-FileCopyrightText: © 2024 Stacey Adams <stacey.belle.rose [AT] gmail [DOT] com>
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: © 2024 Stacey Adams <stacey.belle.rose@gmail.com>
+# SPDX-License-Identifier: Unlicense
 
 SPOTIPY_CLIENT_ID= # fill this in for your own Spotify app
 SPOTIPY_CLIENT_SECRET= # fill this in for your own Spotify app
